[metadata]
name = virtue
url = https://github.com/Julian/Virtue
project_urls =
    Documentation = https://virtue.readthedocs.io/en/latest/
    Source = https://github.com/Julian/Virtue
    Issues = https://github.com/Julian/Virtue/issues/
description =
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Julian Berman
author_email = Julian+Virtue@GrayVines.com
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires = 
    importlib_metadata; python_version < '3.8'
    attrs>=19
    click
    colorama
    pyrsistent
    twisted

[options.entry_points]
console_scripts =
    virtue = virtue._cli:main

[flake8]
exclude =
    virtue/__init__.py
    virtue/compat.py

[bdist_wheel]
universal = 1
