[metadata]
name = virtue
url = https://github.com/Julian/Virtue
project_urls =
    Documentation = https://virtue.readthedocs.io/en/latest/
    Source = https://github.com/Julian/Virtue
    Issues = https://github.com/Julian/Virtue/issues/
description = "After trial comes virtue. A test runner for good."
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Julian Berman
author_email = Julian+Virtue@GrayVines.com
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7
install_requires =
    attrs>=19
    importlib_metadata;python_version<'3.8'
    click
    colorama
    pyrsistent
    twisted

[options.entry_points]
console_scripts =
    virtue = virtue._cli:main

[flake8]
inline-quotes = "
exclude =
    virtue/__init__.py
    virtue/compat.py
ignore =
    B008,  # Barring function calls in default args. Ha, no.
    B306,  # See https://github.com/PyCQA/flake8-bugbear/issues/131
    W503,  # (flake8 default) old PEP8 boolean operator line breaks
